infrastructure/configs/traefik/resources/ingress-redirect.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd
  name: tombstone-osborn-io-redirect
  namespace: traefik
spec:
  rules:
    - host: tombstone.osborn.io
      http:
        paths:
          - backend:
              service:
                name: traefik
                port:
                  name: web
            path: /
            pathType: Prefix
